--- a/templates/_DaveKotlin.xml
+++ b/templates/_DaveKotlin.xml
@@ -18,7 +18,7 @@
       <option name="KOTLIN_STATEMENT" value="true" />
     </context>
   </template>
-  <template name="t" value="@org.junit.Test&#10;fun test(){&#10;    $END$&#10;}" description="test method - junit" toReformat="true" toShortenFQNames="true">
+  <template name="t" value="@kotlin.test.Test&#10;fun test(){&#10;    $END$&#10;}" description="test method - kotlin-test" toReformat="true" toShortenFQNames="true">
     <context>
       <option name="KOTLIN_CLASS" value="true" />
     </context>
