--- a/templates/surround.xml
+++ b/templates/surround.xml
@@ -1,5 +1,3 @@
 <templateSet group="surround">
-  <template name="B" value="{$SELECTION$}" shortcut="NONE" description="Surround with {}" toReformat="true" toShortenFQNames="true">
-    <context />
-  </template>
+  <template name="B" value="{$SELECTION$}" shortcut="NONE" description="Surround with {}" toReformat="true" toShortenFQNames="true" />
 </templateSet>
