--- a/templates/_DaveKotlinTeaching.xml
+++ b/templates/_DaveKotlinTeaching.xml
@@ -6,6 +6,8 @@
   </template>
   <template name="users" value="val users: List&lt;User&gt; = listOf(&#10;    User(&quot;dford&quot;, &quot;David&quot;, &quot;Ford&quot;),&#10;    User(&quot;kford&quot;, &quot;Kellie&quot;, &quot;Ford&quot;),&#10;    User(&quot;jblow&quot;, &quot;Joe&quot;, &quot;Blow&quot;)&#10;)&#10;" description="create a list of user" toReformat="true" toShortenFQNames="true">
     <context>
+      <option name="KOTLIN_EXPRESSION" value="true" />
+      <option name="KOTLIN_STATEMENT" value="true" />
       <option name="KOTLIN_TOPLEVEL" value="true" />
     </context>
   </template>
