--- a/templates/_DaveKotlinTeaching.xml
+++ b/templates/_DaveKotlinTeaching.xml
@@ -1,10 +1,10 @@
 <templateSet group="_DaveKotlinTeaching">
-  <template name="user" value="data class User(&#10;    val userName: String,&#10;    val firstName: String,&#10;    val lastName: String&#10;)" description="create a user class" toReformat="true" toShortenFQNames="true">
+  <template name="user" value="data class User(&#10;    val id:Int,&#10;    val userName: String,&#10;    val firstName: String,&#10;    val lastName: String&#10;)" description="create a user class" toReformat="true" toShortenFQNames="true">
     <context>
       <option name="KOTLIN_TOPLEVEL" value="true" />
     </context>
   </template>
-  <template name="users" value="val users: List&lt;User&gt; = listOf(&#10;    User(&quot;dford&quot;, &quot;David&quot;, &quot;Ford&quot;),&#10;    User(&quot;kford&quot;, &quot;Kellie&quot;, &quot;Ford&quot;),&#10;    User(&quot;jblow&quot;, &quot;Joe&quot;, &quot;Blow&quot;)&#10;)&#10;" description="create a list of user" toReformat="true" toShortenFQNames="true">
+  <template name="users" value="val users: List&lt;User&gt; = listOf(&#10;    User(1, &quot;dford&quot;, &quot;David&quot;, &quot;Ford&quot;),&#10;    User(2, &quot;kford&quot;, &quot;Kellie&quot;, &quot;Ford&quot;),&#10;    User(3, &quot;jblow&quot;, &quot;Joe&quot;, &quot;Blow&quot;)&#10;)&#10;" description="create a list of user" toReformat="true" toShortenFQNames="true">
     <context>
       <option name="KOTLIN_EXPRESSION" value="true" />
       <option name="KOTLIN_STATEMENT" value="true" />
